--- a/.github/workflows/main_banger-backend-dep.yml
+++ b/.github/workflows/main_banger-backend-dep.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - banger-backend-dep
 
 on:
@@ -21,10 +18,9 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install and test
         run: |
           npm install
-          npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
@@ -43,7 +39,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -68,4 +64,3 @@ jobs:
           app-name: 'banger-backend-dep'
           slot-name: 'Production'
           package: .
-          
