--- a/.github/workflows/main_banger-backend-dep.yml
+++ b/.github/workflows/main_banger-backend-dep.yml
@@ -20,7 +20,9 @@ jobs:
 
       - name: npm install and test
         run: |
+          cd server
           npm install
+          npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
