--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,10 @@
     "mysql2": "^3.11.3",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.7"
+  },
+  
+  "engines": {
+    "node": ">=20"
   }
+
 }
