better, stronger, faster

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://ambitious-grass-24ad0deaea2a409895e1fe48e7d19f96.azurewebsites.net/
+REACT_APP_API_URL=http://localhost:3360
